# siyuan-mcp

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.example.yml  pyproject.toml
.github/workflows/: ci.yml
skills/siyuan/: SKILL.md
src/siyuan_mcp/: __init__.py  client.py  server.py  service.py  validation.py
tests/: test_service.py  test_validation.py
tests/integration/: test_e2e.py
