[project]
name = "siyuan-mcp"
version = "0.1.0"
description = "An English, ergonomic MCP server for the SiYuan note kernel API."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Charles Bine", email = "charles.bine@gmail.com" }]
keywords = ["siyuan", "mcp", "model-context-protocol", "fastmcp", "notes", "knowledge-base"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Office/Business",
]
dependencies = [
    "mcp>=1.28",
    "requests>=2.31",
]

[project.urls]
Homepage = "https://github.com/metaember/siyuan-mcp"
Repository = "https://github.com/metaember/siyuan-mcp"
Issues = "https://github.com/metaember/siyuan-mcp/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
siyuan-mcp = "siyuan_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/siyuan_mcp"]

[tool.hatch.build.targets.sdist]
include = ["src", "tests", "README.md", "Dockerfile", "pyproject.toml"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
